fixed some unalignments in work state

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -213,9 +213,9 @@ input::-webkit-inner-spin-button {
   background-color: white;
 }
 
-.replay {
-  margin-left: 30px;
-}
+// .replay {
+//   margin-left: 30px;
+// }
 
 .replay, .pause-play, .volume {
   display: inline-block;
@@ -234,7 +234,7 @@ select {
   margin-left: 20px;
   margin-bottom: 3px;
   padding-bottom: 2px;
-  width: 100px;
+  width: 90px;
 }
 
 .pitch {
@@ -284,7 +284,6 @@ select {
   width: 240px;
   box-shadow: 0px 7px 10px #94e9b1;
   outline: none;
-  margin-left: 20px;
   margin-top: 10px;
 }
 
